# dfftlib

./: CHANGELOG  CMakeLists.txt  FindLocalFFT.cmake  FindLocalFFT.txt  FindMKL.cmake  README
src/: CMakeLists.txt  acml_single_interface.c  acml_single_interface.h  bare_fft.c  bare_fft.h  bare_fft_interface.h  cufft_single_interface.c  cufft_single_interface.h  dfft_common.c  dfft_common.h  dfft_cuda.c  dfft_cuda.cu  dfft_cuda.cuh  dfft_cuda.h  dfft_host.c  dfft_host.h  dfft_lib_config.h.in  dfft_local_fft_config.h  mkl_single_interface.h
test/: CMakeLists.txt  test_common.h  unit_test.c  unit_test_cuda.c  unit_test_host.c
